Add optional nodemon reloading of dev

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "check-coverage": "nyc check-coverage --branches 100  --functions 100 --lines 100",
     "deploy": "yarn run build && node scripts/bundle && cd bundle && yarn install --prod && node -r dotenv/config ../node_modules/.bin/serverless deploy -vn && cd ../",
     "dev": "node -r dotenv/config ./node_modules/.bin/serverless offline",
+    "dev-nocache": "nodemon -r dotenv/config ./node_modules/.bin/serverless offline --skipCacheInvalidation",
     "docs": "jsdoc -c jsdoc-config.json",
     "flow": "flow check",
     "lint": "eslint src/**/*.jsx src/**/*.js",
@@ -33,6 +34,7 @@
     "jsdoc": "^3.4.3",
     "jsdoc-babel": "^0.2.1",
     "jsdonk": "^0.2.3",
+    "nodemon": "^1.11.0",
     "nyc": "^10.0.0",
     "react": "^15.4.1",
     "serverless": "^1.2.1",
