--- a/circle.yml
+++ b/circle.yml
@@ -2,19 +2,22 @@ machine:
     pre:
         - mkdir ~/.yarn-cache
     node:
-        version: stable
+        version: 4.3.2
+    environment:
+        YARN_VERSION: 0.17.10
+        PATH: "${PATH}:${HOME}/.yarn/bin"
 
 dependencies:
     pre:
-        # Install Yarn
-        - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
-        - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
-        - sudo apt-get update -qq
-        - sudo apt-get install -y -qq yarn
+        - |
+            if [[ ! -e ~/.yarn/bin/yarn || $(yarn --version) != "${YARN_VERSION}" ]]; then
+                curl -o- -L https://yarnpkg.com/install.sh | bash -s -- --version $YARN_VERSION
+            fi
     cache_directories:
-        - "~/.yarn-cache"
+        - ~/.yarn
+        - ~/.yarn-cache
     override:
-        - yarn install
+        - yarn install --ignore-engines # ignore engines is temporary until serverless offline 3.5.5 is released
 test:
     override:
         - yarn run test-all
