--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist",
     "check-coverage": "nyc check-coverage --branches 100  --functions 100 --lines 100",
-    "deploy": "yarn run build && node scripts/bundle && cd bundle && yarn install --ignore-engines --prod && node -r dotenv/config ../node_modules/.bin/serverless deploy -vn && cd ../",
+    "deploy": "yarn run build && node scripts/bundle && cd bundle && yarn install --ignore-engines --prod && node -r dotenv/config ../node_modules/.bin/serverless deploy -v && cd ../",
     "dev": "node -r dotenv/config ./node_modules/.bin/serverless offline",
     "dev-nocache": "nodemon -r dotenv/config ./node_modules/.bin/serverless offline --skipCacheInvalidation",
     "docs": "jsdoc -c jsdoc-config.json",
